2007-06-18  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * generic.h (ATTRIBUTE_PACKED, ATTRIBUTE_MAY_ALIAS): fix inverted #ifdef __GNUC__ logic
        * integers.h (TI1, TI2, TI4, HI1, HI2, HI4): Work around GCC bug with __attribute__((may_alias)).

2007-04-06  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * main.c (main): check the return values of fread
        * filetypes.c: include sysdep.h
          (is_regfile): mark filename with ATTRIBUTE_UNUSED

2007-04-04  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * main.c: import ttdasm.c from ttdasm, rename to main.c, remove VTI
                  code, port to TiEmu code
        * tt.h: import from ttdasm, add USAGE_OUT from tt_version.h
        * bfd.h, disasm.c, dis-asm.h, disasm.h, disassemble.c, dis-buf.c,
          dis-init.c, m68k-dis.c, m68k.h, m68k-opc.c, opintl.h, sysdep.h: import
            from TiEmu-patched GDB. Changes from TiEmu:
            2007-04-04  Kevin Kofler  <Kevin@tigcc.ticalc.org>
                    * m68k-dis.c (print_insn_arg): Don't accept floating-point immediates.
                      (NEXTSINGLE, NEXTDOUBLE, NEXTEXTEND, NEXTPACKED): Remove.
                      (print_insn_arg): Only accept %usp and %ssp as special registers on the 68000.
                                        Handle failure return from print_indexed.
                      (print_indexed): Only allow valid indexed addressing on the 68000.
            2006-05-14  Kevin Kofler  <Kevin@tigcc.ticalc.org>
                    * m68k-dis.c (m68k_scan_mask): Remove excess spaces. Fix a use of $ instead of 0x.
            2005-05-22  Kevin Kofler  <Kevin@tigcc.ticalc.org>
                    * m68k-dis.c (m68k_scan_mask): Handle A-Line (ER_throw) instructions.
            2005-05-11  Kevin Kofler  <Kevin@tigcc.ticalc.org>
                    * m68k-dis.c: Use asm_setjmp and asm_longjmp on Win32.
            2005-04-29  Kevin Kofler  <Kevin@tigcc.ticalc.org>