@@ -1,3 +1,8 @@
+2009-07-14  Lionel Debroux <lionel_debroux@yahoo.fr>
+
+        * romcalls.c: protect against accesses out of the bounds of the ROM_CALL info table.
+        * m68k-dis.c: don't output the NULL string that might be returned by romcalls_get_name().
+
 2007-06-18  Kevin Kofler  <Kevin@tigcc.ticalc.org>
 
         * generic.h (ATTRIBUTE_PACKED, ATTRIBUTE_MAY_ALIAS): fix inverted #ifdef __GNUC__ logic
